# Hackerrank-3-Months-Prep

./: CMakeLists.txt  README.md  pnpm-lock.yaml  tsconfig.json
ts/: package.json
week-1/: CMakeLists.txt
week-1/1-plus-minus/: index.ts
week-1/2-min-max-sum/: index.ts  main.cpp
week-1/3-time-conversion/: index.ts
week-1/4-breaking-the-records/: index.ts
week-1/5-camel-case/: index.ts
week-1/6-divisible-sum-pairs/: index.ts
week-1/test/: index.ts
week-2/1-lonely-integer/: index.ts
week-2/2-grading-students/: index.ts
week-2/3-flipping-bits/: index.ts
week-2/5-counting-sort/: index.ts
week-2/6-counting-valleys/: index.ts
week-2/7-pangrams/: index.ts
week-2/test-flipping-the-matrix/: index.ts
week-3/: CMakeLists.txt
week-3/1-permuting-two-arrays/: index.ts
week-3/2-subarray-division-2/: index.ts
week-3/3-xor-string-3/: index.ts  main.cpp
week-3/4-sales-by-match/: index.ts
week-3/5-migratory-birds/: index.ts
week-3/6-maximum-perimeter-triangle/: index.ts
week-6/: CMakeLists.txt
week-6/1-prime-dates/: main.cpp
week-6/2-sherlock-and-array/: index.ts  main.kt  main.swift
week-6/3-misere-nim/: index.ts  main.cpp  main.kt  main.swift
week-6/4-gaming-array-1/: index.ts  main.cpp  main.kt  main.swift
week-6/5-forming-a-magic-square/: index.ts  main.kt  main.swift
week-6/6-recursive-digit-sum/: index.ts  main.kt  main.swift
week-6/7-counter-game/: index.ts  main.cpp  main.kt  main.swift
week-6/8-sum-vs-xor/: index.ts  main.kt  main.swift
week-6/test-palindrome-index/: index.ts  main.cpp  main.kt  main.swift
(+98 files in other folders)
